4.2.0 2022xxxx
  BF: Review: Optimizations
  CR: Change from wording segment, which is now called structure
  CR: Generator: Added placeholder syntax for disposable structures
      e.g. #[scope{{...}}]
      Disposable structures are bound to their place and, unlike a normal
      structure/scope, can be defined differently multiple times, but cannot be
      reused or created or extracted based on their name.
  CR: Generator: Added structures for single values
      e.g. #[price[[Your price #[#] Euro]]]
           #[price{{Your price #[#] Euro}}]
      Previously, the value of simple data was output directly.
      Now a structure can be used here as well.
      The actual value can then be set with the new syntax #[#].
      This structures for single values can also be used like the
      exists-placeholder and for conditional output of static texts.
      e.g. #[value[[text output only if value exists]]]
           #[value{{text output only if value exists}}]
      Placeholders for static texts can be used from.
      e.g. #[price[[Your price #[#] ![currency]]]]
           #[price{{Your price #[#] ![currency]}}]

4.1.2 20220713
  BF: Build: Optimization of the release info process
  BF: Maven: Update of dependencies
  BF: Template: Correction for handling unexpected data type in data map
      e.g. Collection with Integer caused errors

4.1.1 20220327
  BF: Maven: Update of dependencies
      CVE-2020-36518
  BF: Build: Optimization of the release info process
  CR: OpenHtmlToPdf: Update to version 1.0.10
  CR: Releases only as attachments on the GitHub release page
      Otherwise the download during cloning will be too large.

4.1.0 20210924
  BF: Maven: Update of dependencies
  BF: Review: Optimization (code + tests)
  CR: OpenHtmlToPdf: Update to version 1.0.9
  CR: Java: Switch to version 11
  CR: Preview: Added argument/option/keyword/... @Resources
      In addition to paths/filters/globs, @Resources can also be used to scan the classpath.