@@ -1,0 +1,29 @@
+{
+  "_articles": [
+    {
+      "_0$0$": "1",
+      "_-_": "Article A",
+      "$": 100
+    },
+    {
+      "_0$0$": "2",
+      "_-_": "Article B",
+      "$": 200
+    },
+    {
+      "_0$0$": "3",
+      "_-_": "Article C",
+      "$": 300
+    },
+    {
+      "_0$0$": "4",
+      "_-_": "Article D",
+      "$": 400
+    },
+    {
+      "_0$0$": "5",
+      "_-_": "Article E",
+      "$": 500
+    }
+  ]
+}
