@@ -1,0 +1,37 @@
+A---
+#[_articles[[
+AT: #[_-_]
+AI: #[_0$0$]
+AP: #[$[[a-#[#] AAA]]]
+]]]
+B---
+#[_articles{{
+BT: #[_-_]
+BI: #[_0$0$]
+BP: #[$[[b-#[#] BBB]]]
+}}]
+C---
+#[_articles{{
+CT: #[_-_]
+CI: #[_0$0$]
+CP: #[${{c-#[#] CCC}}]
+}}]
+D---
+#[_articles{{
+DI: #[_0$0$]
+DT: #[_-_]
+DP: #[${{#[#]}}]
+}}]
+E---
+#[_articles[[
+ET: #[_-_]
+EI: #[_0$0$]
+EP: #[$[[#[#]]]]
+]]]
+F---
+#[_articles{{
+FT: #[_-_]
+FI: #[_0$0$]
+FP: #[$[[#[#]]]]
+}}]
+X----
